// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PasswordField > outlined prop 1`] = `
<div data-v-6859b53e="" class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-locale--is-ltr v-text-field">
  <!---->
  <div class="v-input__control">
    <div class="v-field v-field--appended v-field--center-affix v-field--no-label v-field--variant-outlined v-theme--light v-locale--is-ltr">
      <div class="v-field__overlay"></div>
      <div class="v-field__loader">
        <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
          <!---->
          <div class="v-progress-linear__background bg-primary" style="width: 100%;"></div>
          <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
            <div class="v-progress-linear__indeterminate">
              <div class="v-progress-linear__indeterminate long bg-primary"></div>
              <div class="v-progress-linear__indeterminate short bg-primary"></div>
            </div>
          </transition-stub>
          <!---->
        </div>
      </div>
      <!---->
      <div class="v-field__field" data-no-activator="">
        <!----><label class="v-label v-field-label" for="input-0">
          <!---->
          <!---->
        </label>
        <!----><input size="1" type="password" id="input-0" aria-describedby="input-0-messages" validateonblur="true" btn="[object Object]" class="v-field__input">
        <!---->
      </div>
      <!---->
      <div class="v-field__append-inner"><button data-v-6859b53e="" type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text mx-auto" aria-label="Afficher le mot de passe"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator=""><i data-v-6859b53e="" class="M11.83,9L15,12.16C15,12.11 15,12.05 15,12A3,3 0 0,0 12,9C11.94,9 11.89,9 11.83,9M7.53,9.8L9.08,11.35C9.03,11.56 9,11.77 9,12A3,3 0 0,0 12,15C12.22,15 12.44,14.97 12.65,14.92L14.2,16.47C13.53,16.8 12.79,17 12,17A5,5 0 0,1 7,12C7,11.21 7.2,10.47 7.53,9.8M2,4.27L4.28,6.55L4.73,7C3.08,8.3 1.78,10 1,12C2.73,16.39 7,19.5 12,19.5C13.55,19.5 15.03,19.2 16.38,18.66L16.81,19.08L19.73,22L21,20.73L3.27,3M12,7A5,5 0 0,1 17,12C17,12.64 16.87,13.26 16.64,13.82L19.57,16.75C21.07,15.5 22.27,13.86 23,12C21.27,7.61 17,4.5 12,4.5C10.6,4.5 9.26,4.75 8,5.2L10.17,7.35C10.74,7.13 11.35,7 12,7Z mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
          <!---->
          <!---->
        </button>
        <!---->
      </div>
      <div class="v-field__outline">
        <div class="v-field__outline__start"></div>
        <!---->
        <div class="v-field__outline__end"></div>
        <!---->
      </div>
    </div>
  </div>
  <!---->
  <div class="v-input__details">
    <transition-stub name="slide-y-transition" appear="false" persisted="false" css="true" tag="div" class="v-messages" role="alert" aria-live="polite" id="input-0-messages">
      <!---->
    </transition-stub>
    <!---->
  </div>
</div>
`;

exports[`PasswordField > renders correctly 1`] = `
<div data-v-6859b53e="" class="v-input v-input--horizontal v-input--density-default v-locale--is-ltr v-text-field v-input--plain-underlined">
  <!---->
  <div class="v-input__control">
    <div class="v-field v-field--appended v-field--no-label v-field--variant-underlined v-theme--light v-locale--is-ltr">
      <div class="v-field__overlay"></div>
      <div class="v-field__loader">
        <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
          <!---->
          <div class="v-progress-linear__background bg-primary" style="width: 100%;"></div>
          <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
            <div class="v-progress-linear__indeterminate">
              <div class="v-progress-linear__indeterminate long bg-primary"></div>
              <div class="v-progress-linear__indeterminate short bg-primary"></div>
            </div>
          </transition-stub>
          <!---->
        </div>
      </div>
      <!---->
      <div class="v-field__field" data-no-activator="">
        <!----><label class="v-label v-field-label" for="input-0">
          <!---->
          <!---->
        </label>
        <!----><input size="1" type="password" id="input-0" aria-describedby="input-0-messages" validateonblur="true" btn="[object Object]" class="v-field__input">
        <!---->
      </div>
      <!---->
      <div class="v-field__append-inner"><button data-v-6859b53e="" type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text mx-auto" aria-label="Afficher le mot de passe"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator=""><i data-v-6859b53e="" class="M11.83,9L15,12.16C15,12.11 15,12.05 15,12A3,3 0 0,0 12,9C11.94,9 11.89,9 11.83,9M7.53,9.8L9.08,11.35C9.03,11.56 9,11.77 9,12A3,3 0 0,0 12,15C12.22,15 12.44,14.97 12.65,14.92L14.2,16.47C13.53,16.8 12.79,17 12,17A5,5 0 0,1 7,12C7,11.21 7.2,10.47 7.53,9.8M2,4.27L4.28,6.55L4.73,7C3.08,8.3 1.78,10 1,12C2.73,16.39 7,19.5 12,19.5C13.55,19.5 15.03,19.2 16.38,18.66L16.81,19.08L19.73,22L21,20.73L3.27,3M12,7A5,5 0 0,1 17,12C17,12.64 16.87,13.26 16.64,13.82L19.57,16.75C21.07,15.5 22.27,13.86 23,12C21.27,7.61 17,4.5 12,4.5C10.6,4.5 9.26,4.75 8,5.2L10.17,7.35C10.74,7.13 11.35,7 12,7Z mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
          <!---->
          <!---->
        </button>
        <!---->
      </div>
      <div class="v-field__outline">
        <!---->
        <!---->
      </div>
    </div>
  </div>
  <!---->
  <div class="v-input__details">
    <transition-stub name="slide-y-transition" appear="false" persisted="false" css="true" tag="div" class="v-messages" role="alert" aria-live="polite" id="input-0-messages">
      <!---->
    </transition-stub>
    <!---->
  </div>
</div>
`;
